# smartcomplete

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  SmartComplete-Install.desktop  install.sh  uninstall.sh
config/: linuxcomplete-addon.conf  linuxcomplete-im.conf  linuxcomplete.conf
data/dict/: en_US.txt  tr_TR.txt
data/emoji/: en_emoji.tsv
data/frequency/: en_freq.txt  tr_freq.txt
data/ngram/: en_bigrams.txt  en_phrases.txt  tr_bigrams.txt
data/rules/: en_context_bonus_rules.txt  en_grammar_pair_rules.txt  en_grammar_triple_rules.txt  en_phrase_bonus_rules.txt  en_typo_map.txt
scripts/: install.sh  rules_tool.py  uninstall.sh
src/engine/: engine.cpp  engine.h  engine_config.cpp  engine_config.h
src/predictor/: ai_reranker.cpp  ai_reranker.h  dictionary.cpp  dictionary.h  emoji.cpp  emoji.h  grammar_rules.cpp  grammar_rules.h  ngram.cpp  ngram.h  phrase.cpp  phrase.h  predictor.cpp  predictor.h  text_utils.cpp  text_utils.h  trie.cpp  trie.h
tests/: ai_reranker_regression.cpp  blocklist_test.cpp  data_quality_regression.cpp  emoji_index_test.cpp  english_grammar_sanity.cpp  grammar_index_test.cpp  predictor_learning_regression.cpp  predictor_quality_regression.cpp  rules_tool_regression.py  text_utils_test.cpp
